--- a/Day3_sassLandingpage/style.css
+++ b/Day3_sassLandingpage/style.css
@@ -1,8 +1,310 @@
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap');
 *{
-    border: 0;
+    box-sizing: border-box;
     padding: 0;
+    margin: 0;
     /* font-family: 'Vollkorn', serif; */
     /* font-family: 'Montserrat', sans-serif; */
+}
+/* header style */
+.Visual_Product{
+    font-size: 32px;
+    font-family: 'Vollkorn', serif;
+}
+header{
+    padding-block: 20px;
+}
+.header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.nav{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    column-gap: 20px;
+}
+li {
+    list-style: none;
+}
+
+a{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900px;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 14px;
+    color: black;
+}
+.startedbtn{
+    color: white;
+    background-color: black;
+    padding-block: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 16px;
+    text-transform: capitalize;
+}
+.startedbtn:hover{
+    cursor: pointer;
+}
+
+/* main section styles */
+.mainsection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+main{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding: 50px;
+    background-color: black;
+    color: white;
+}
+.mainsubsec{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    width: 500px;
+}
+.mainsubsec>h1{
+   
+    font-family: 'Montserrat', sans-serif;
+    font-size: 42px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.mainsubsec>p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.btndiv{
+    display: flex;
+    column-gap: 30px;
+    margin-bottom: 50px;
+    
+}
+.startedbtn2{
+    background-color: black;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    padding-block: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 1px solid white;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+.talktosalesbtn{
+    background-color: white;
+    color: black;
+    font-family:'Montserrat', sans-serif;
+    font-size: 14px;
+    text-transform: capitalize;
+    border-radius:48px;
+    padding-block: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+.imgdiv{
+    height: 500px;
+}
+/* companies section */
+.companysection{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 100px;
+    margin-top: 85px;
+    margin-bottom: 100px; 
+}
+
+/* services section */
+.servicessection{
+    display: flex;
+    justify-content: center;
+    padding: 50px 50px;
+    margin-bottom: 100px;
+    font-family: 'Montserrat', sans-serif;
+}
+.service1{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    row-gap: 10px;
+    
+}
+.service2{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    row-gap: 10px;
+}
+.service3{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    row-gap: 10px;
+}
+.iconclass{
+    width: 56px;
+}
+.talktosalesbtn1{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    font-family:'Montserrat', sans-serif;
+    font-size: 14px;
+    text-transform: capitalize;
+    border-radius:48px;
+    padding-block: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+
+}
+/* customer service section */
+
+.customerservicesection{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family:'Montserrat', sans-serif;
+    margin-bottom: 100px;
+}
+.custsec1{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    width: 598px;
+    row-gap: 15px;
+}
+.custsec1>h2{
+    font-size: 42px;
+    font-weight: bold;
+}
+.custsec1>p{
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+.custbtnsection{
+    display: flex;
+    column-gap: 20px;
+}
+
+/* showcase section */
+.showcasesection{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 80px 108px;
+    font-family:'Montserrat', sans-serif;
+    background-color: black;
+    color: white;
+    margin-bottom: 100px;
+}
+
+/* cta secton */
+.ctasection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: start;
+    background-color: black;
+    color: white;
+    font-family:'Montserrat', sans-serif;
+    padding: 80px 108px;
+}
+.custbtnsection1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 20px;
+    padding-left: 150px;
+}
+
+/* footer section */
+.majorfooter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 70px;
+    row-gap: 50PX;
+    column-gap: 150PX;
+    font-family:'Montserrat', sans-serif;
+}
+.section1>h3{
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+.section1>.alignh3{
+    position: relative;
+    top: 10px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+.editor{
+    position: relative;
+    top: -10px;
+    text-transform: uppercase;
+}
+
+span{
+    background-color: black;
+    color:white;
+    border-radius: 100px;
+    padding: 5px 13px;
+    font-size: 14px;
+}
+.minifooter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family:'Montserrat', sans-serif;
+    margin-bottom: 100px;
+}
+.footer4{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.langsec{
+    display: flex;
+    column-gap: 25px;
+    margin-bottom: 65px;
+}
+.langsec>.undl{
+    text-decoration: underline;
+}
+.dot::before{
+    content: ".";
+    font-family: 'Poppins', sans-serif;
+    font-weight: bolder;
+    position: relative;
+    top: -5px;
+    padding-right: 15px;
+}
+.pages{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    column-gap: 25px;
+}
+.copyright{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-left: 820px;
 }
